# platform.core.appfw.com-core

./: CMakeLists.txt  com-core.pc.in  connector.pc.in  project.config
debian/: changelog  control  libcom-core-dev.install.in  libconnector-dev.install.in  rules
include/: com-core.h  com-core_internal.h  com-core_packet-router.h  com-core_packet.h  com-core_thread.h  connector.h  connector_packet.h  debug.h  packet.h  secom_socket.h  secure_socket.h  util.h
packaging/: libcom-core.changes  libcom-core.spec  libconnector.spec
src/: com-core.c  com-core_packet-router.c  com-core_packet.c  com-core_thread.c  connector.c  connector_packet.c  dlist.c  packet.c  secom_socket.c  secure_socket.c  util.c
